# Trainstation

./: .gitignore  README.md  go.mod  go.sum  main.go
agent/: base.go  interface.go  registry.go  runners.go
config/: config.go
provider/: provider.go
router/: prompts.go  router.go
scheduler/: executor.go  workflow.go
test/: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  pyproject.toml  test_tui_scroll.py  tsconfig.json
test/deepseek-landing/: index.html  script.js  style.css
test/src/: App.tsx  index.tsx
test/src/cli_tool/: __init__.py  __main__.py  cli.py  config.py  tui.py
test/src/cli_tool/db/: connection.py  migrate.py  schema.sql
test/src/cli_tool/deepseek/: __init__.py  client.py  exceptions.py  types.py
test/src/cli_tool/models/: __init__.py  models.py
test/src/cli_tool/tui/: __init__.py  app.py  theme.py  widgets.py
test/src/cli_tool/tui/dialogs/: confirm.py  import_dialog.py  input_dialog.py
test/src/cli_tool/tui/screens/: exercise_results.py  exercise_session.py  exercise_setup.py  help_screen.py  list_detail.py  main_menu.py  quiz_results.py  quiz_session.py  quiz_setup.py  settings.py  stats.py  word_lists.py
test/tests/: test_cli.py  test_config.py  test_deepseek_client.py  test_tui.py
tui/: commands.go  logo.go  model.go  model_test.go  onboarding.go  overlay.go  styles.go  view.go
usage/: usage.go
