[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tool"
version = "0.1.0"
description = "A Python CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "openai>=1.0",
    "pyyaml>=6",
    "textual>=0.40.0",
]

[project.scripts]
cli-tool = "cli_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
